# wazirx_indicator

./: README.md  app.py  com.github.gavlenamdev.wazirx_indicator.json  config.py  meson.build  requirements.txt
assets/: favourites.txt  index.json  primary.txt
data/: com.github.gavlenamdev.wazirx_indicator.appdata.xml.in  com.github.gavlenamdev.wazirx_indicator.desktop.in  com.github.gavlenamdev.wazirx_indicator.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: config.py  home_window.py  home_window.ui~  main.py  meson.build  test.py  wazirx_indicator.gresource.xml  wazirx_indicator.in  window.py  window.ui
src/helpers/: wazirx_helper.py
src/models/: db.py  files.py
src/widget/: coin_button.py  indicator_menu.py
wazirx_indicator/: __init__.py
wazirx_indicator/helpers/: __init__.py  wazirx_helper.py
wazirx_indicator/models/: coin.py  files.py
wazirx_indicator/ui/: home_window.glade
wazirx_indicator/widget/: home_window.py  indicator_menu.py
